// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseMarkdown > another example 1`] = `
{
  "show-install-script": {
    "conditions": {},
    "enabled": true,
    "environments": {
      "production": {
        "enabled": false,
        "name": "Production",
      },
    },
    "name": "Show install script",
  },
  "show-logo": {
    "conditions": {},
    "enabled": true,
    "environments": {
      "development": {
        "enabled": false,
        "name": "Development",
      },
      "preview": {
        "enabled": false,
        "name": "Preview",
      },
      "production": {
        "enabled": false,
        "name": "Production",
      },
    },
    "name": "Show logo",
  },
}
`;

exports[`parseMarkdown > another example with conditions 1`] = `
{
  "show-footer": {
    "conditions": {},
    "enabled": false,
    "environments": {},
    "name": "Show footer",
  },
  "show-install-script": {
    "conditions": {},
    "enabled": false,
    "environments": {
      "enabled": {
        "enabled": true,
        "name": "enabled",
      },
    },
    "name": "Show install script",
  },
  "show-logo": {
    "conditions": {
      "condition-1": {
        "enabled": false,
        "name": "condition-1",
      },
      "condition-2": {
        "enabled": true,
        "name": "condition-2",
      },
    },
    "enabled": true,
    "environments": {
      "development": {
        "enabled": false,
        "name": "Development",
      },
      "enabled": {
        "enabled": false,
        "name": "enabled",
      },
      "preview": {
        "enabled": false,
        "name": "Preview",
      },
      "production": {
        "enabled": false,
        "name": "Production",
      },
    },
    "name": "Show logo",
  },
}
`;

exports[`parseMarkdown > should parse markdown with disabled feature 1`] = `
{
  "feature-1": {
    "conditions": {
      "condition-1": {
        "enabled": false,
        "name": "condition-1",
      },
      "condition-2": {
        "enabled": false,
        "name": "condition-2",
      },
    },
    "enabled": false,
    "environments": {
      "development": {
        "enabled": false,
        "name": "Development",
      },
      "preview": {
        "enabled": false,
        "name": "Preview",
      },
      "production": {
        "enabled": false,
        "name": "Production",
      },
    },
    "name": "Feature 1",
  },
  "feature-2": {
    "conditions": {
      "condition-3": {
        "enabled": false,
        "name": "condition-3",
      },
    },
    "enabled": true,
    "environments": {
      "production": {
        "enabled": false,
        "name": "Production",
      },
    },
    "name": "Feature 2",
  },
}
`;

exports[`parseMarkdown > should parse markdown with enabled feature 1`] = `
{
  "feature-1": {
    "conditions": {
      "condition-1": {
        "enabled": false,
        "name": "condition-1",
      },
      "condition-2": {
        "enabled": false,
        "name": "condition-2",
      },
    },
    "enabled": true,
    "environments": {
      "development": {
        "enabled": false,
        "name": "Development",
      },
      "preview": {
        "enabled": false,
        "name": "Preview",
      },
      "production": {
        "enabled": false,
        "name": "Production",
      },
    },
    "name": "Feature 1",
  },
  "feature-2": {
    "conditions": {
      "condition-3": {
        "enabled": false,
        "name": "condition-3",
      },
    },
    "enabled": true,
    "environments": {
      "production": {
        "enabled": false,
        "name": "Production",
      },
    },
    "name": "Feature 2",
  },
}
`;

exports[`parseMarkdown > should parse markdown with one environment enabled 1`] = `
{
  "feature-1": {
    "conditions": {
      "condition-1": {
        "enabled": false,
        "name": "condition-1",
      },
      "condition-2": {
        "enabled": false,
        "name": "condition-2",
      },
    },
    "enabled": true,
    "environments": {
      "development": {
        "enabled": false,
        "name": "Development",
      },
      "preview": {
        "enabled": false,
        "name": "Preview",
      },
      "production": {
        "enabled": false,
        "name": "Production",
      },
    },
    "name": "Feature 1",
  },
  "feature-2": {
    "conditions": {
      "condition-3": {
        "enabled": false,
        "name": "condition-3",
      },
    },
    "enabled": false,
    "environments": {
      "production": {
        "enabled": false,
        "name": "Production",
      },
    },
    "name": "Feature 2",
  },
}
`;

exports[`parseMarkdown > should parse markdown with two environments enabled in different features 1`] = `
{
  "feature-1": {
    "conditions": {
      "condition-1": {
        "enabled": false,
        "name": "condition-1",
      },
      "condition-2": {
        "enabled": false,
        "name": "condition-2",
      },
    },
    "enabled": false,
    "environments": {
      "development": {
        "enabled": false,
        "name": "Development",
      },
      "preview": {
        "enabled": false,
        "name": "Preview",
      },
      "production": {
        "enabled": false,
        "name": "Production",
      },
    },
    "name": "Feature 1",
  },
  "feature-2": {
    "conditions": {
      "condition-3": {
        "enabled": false,
        "name": "condition-3",
      },
    },
    "enabled": true,
    "environments": {
      "preview": {
        "enabled": false,
        "name": "Preview",
      },
      "production": {
        "enabled": false,
        "name": "Production",
      },
    },
    "name": "Feature 2",
  },
}
`;

exports[`parseMarkdown > should parse valid markdown correctly 1`] = `
{
  "feature-1": {
    "conditions": {
      "condition-1": {
        "enabled": false,
        "name": "condition-1",
      },
      "condition-2": {
        "enabled": false,
        "name": "condition-2",
      },
    },
    "enabled": false,
    "environments": {
      "preview": {
        "enabled": false,
        "name": "Preview",
      },
      "production": {
        "enabled": false,
        "name": "Production",
      },
    },
    "name": "Feature 1",
  },
}
`;
